# psoc6-hal

./: .travis.yml  Cargo.toml  README.md  memory.x  openocd.cfg  openocd.gdb  pyocd.gdb
.cargo/: config
examples/: blinky.rs  hello.rs
src/: delay.rs  gpio.rs  lib.rs  prelude.rs
