[package]
authors = ["Matt Vertescher <mvertescher@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the psoc6 family of microcontrollers"
documentation = "https://docs.rs/psoc6-hal"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "psoc6-hal"
readme = "README.md"
repository = "https://github.com/psoc-rs/psoc6-hal"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.11"

[dependencies.psoc6-pac]
git = "https://github.com/psoc-rs/psoc6-pac.git"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

[dev-dependencies]
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
panic-semihosting = "0.5.2"

[features]
rt = []

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true
